# Tether

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md
Assets/: CMakeLists.txt
Tests/MultipleWindows/: CMakeLists.txt
Tests/MultipleWindows/Source/: Main.cpp
Tests/RendererTesting/: CMakeLists.txt  README.md
Tests/RendererTesting/Source/: Main.cpp
Tests/SimpleWindow/: CMakeLists.txt
Tests/SimpleWindow/Assets/: style.xml
Tests/SimpleWindow/Source/: Main.cpp
Tests/TestApp/: Build.sh  CMakeLists.txt  README.md  Run.sh
Tests/TestApp/Source/: Main.cpp
Tether/: CMakeLists.txt
Tether.Rendering/: CMakeLists.txt  README.md
Tether.Rendering/Assets/: CMakeLists.txt
Tether.Rendering/Assets/Shaders/: solid.frag
Tether.Rendering/Assets/VulkanShaders/: solid.frag  solid.vert  text.frag  text.vert  textured.frag  textured.vert
Tether.Rendering/Headers/Tether/Rendering/: Compositor.hpp  FreetypeLibrary.hpp  GraphicsContext.hpp  ImageLoader.hpp  RenderAction.hpp  RenderTarget.hpp  Renderer.hpp  WindowRenderer.hpp  WindowUI.hpp  WindowUIManager.hpp
Tether.Rendering/Source/: Compositor.cpp  FreetypeLibrary.cpp  GraphicalWindow.cpp  ImageLoader.cpp  RenderContext.cpp  Renderer.cpp  RenderingModule.cpp  UIRenderer.cpp  WindowRenderTarget.cpp  WindowRenderer.cpp  WindowUI.cpp  WindowUIManager.cpp
Tether.Rendering/Source/Elements/: Button.cpp  Division.cpp  Element.cpp  ImageView.cpp  ProgressBar.cpp  Text.cpp
Tether.Rendering/Source/Elements/Common/: BorderedElement.cpp
Tether.Rendering/Source/Objects/: Image.cpp  Object.cpp  Rectangle.cpp  Text.cpp
Tether.Rendering/Source/Resources/: BufferedImage.cpp  Font.cpp  Resource.cpp
Tether.Rendering/Source/Vulkan/: AdvancedNative.cpp  Allocator.cpp  AllocatorManager.cpp  BufferStager.cpp  CommandBufferDescriptor.cpp  CommandBufferState.cpp  Compositor.cpp  Context.cpp  ContextCreator.cpp  ContextNative.cpp  DebugCallback.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetWritable.cpp  Device.cpp  DeviceLoader.cpp  GlobalVulkan.cpp  GraphicsContext.cpp  ImageStager.cpp  Instance.cpp  InstanceLoader.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  ShaderModule.cpp  SimpleNative.cpp  SimpleRenderer.cpp  SimpleVulkanContext.cpp  SingleUseCommandBuffer.cpp  Surface.cpp  Swapchain.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VkUtils.cpp  VmaImplementation.cpp  VulkanBufferedImage.cpp  VulkanCompositor.cpp  VulkanContext.cpp  VulkanGraphicsContext.cpp  VulkanRenderer.cpp  (+7 more)
Tether.Rendering/Source/Vulkan/Common/: TypeNames.cpp
Tether.Rendering/Source/Vulkan/ObjectNatives/: RectangleNative.cpp  VkObjectNative.cpp
Tether.Rendering/Source/Vulkan/Objects/: Image.cpp  ObjectRenderer.cpp  Rectangle.cpp  RectangleRenderer.cpp  Text.cpp
Tether.Rendering/Source/Vulkan/Resources/: BufferedImage.cpp  Font.cpp
Tether.Rendering/Tests/: CMakeLists.txt
Tether.Rendering/Tests/GUI/: CMakeLists.txt
Tether.Rendering/Tests/GUI/Source/: Main.cpp
Tether.Rendering/Tests/ImageTesting/: CMakeLists.txt
Tether.Rendering/Tests/ImageTesting/Source/: Main.cpp
Tether.Rendering/Tests/MultipleGUIWindows/: CMakeLists.txt
Tether.Rendering/Tests/MultipleGUIWindows/Source/: Main.cpp
Tether.Rendering/Tests/TextTesting/Source/: Main.cpp
Tether.Rendering/Tests/VulkanImGui/: CMakeLists.txt
Tether.Rendering/Tests/VulkanImGui/Source/: Main.cpp
Tether/Headers/Tether/: Application.hpp  Module.hpp  Native.hpp  NativeVulkan.hpp  NativeWindow.hpp  SimpleWindow.hpp  Tether.hpp  Window.hpp
Tether/Headers/Tether/Common/: Color.hpp  Defs.hpp  HashedString.hpp  HashedType.hpp  IDisposable.hpp  Library.hpp  LibraryLoader.hpp  Logger.hpp  Ref.hpp  Stopwatch.hpp  StringTools.hpp  StringUtils.hpp  TypeTools.hpp  Types.hpp  VectorUtils.hpp  WindowHint.hpp
Tether/Headers/Tether/Controls/: Control.hpp
Tether/Headers/Tether/Devices/: DeviceManager.hpp  Monitor.hpp
Tether/Headers/Tether/Elements/: Division.hpp  Element.hpp
Tether/Headers/Tether/Events/: EventHandler.hpp  EventType.hpp  WindowClosingEvent.hpp  WindowErrorEvent.hpp  WindowMoveEvent.hpp  WindowRepaintEvent.hpp  WindowResizeEvent.hpp
Tether/Headers/Tether/Input/: InputListener.hpp  InputType.hpp  KeyCharInfo.hpp  KeyInfo.hpp  MouseClickInfo.hpp  MouseMoveInfo.hpp  RawMouseMoveInfo.hpp
Tether/Headers/Tether/Math/: Constants.hpp  Defs.hpp  Types.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
Tether/Headers/Tether/Native/: SimpleWindowNative.hpp  Win32SimpleWindow.hpp
Tether/Headers/Tether/Platform/: PlatformDefs.hpp  SimpleWindowNative.hpp  Win32Application.hpp  Win32SimpleWindow.hpp  Win32Window.hpp  X11Application.hpp  X11SimpleWindow.hpp  X11Window.hpp
Tether/Platform/Linux/: Linux_Application.cpp
Tether/Platform/Win32/: Win32_Application.cpp  Win32_SimpleWindow.cpp
Tether/Source/: Application.cpp  Module.cpp  SimpleWindow.cpp  Vulkan_Application.cpp  Win32_SimpleWindow.cpp  Window.cpp
Tether/Source/Common/: Color.cpp  HashedString.cpp  IDisposable.cpp  Logger.cpp  Stopwatch.cpp  StringTools.cpp  TypeTools.cpp  Win32_LibraryLoader.cpp
Tether/Source/Controls/: Control.cpp
Tether/Source/Devices/: DeviceManager.cpp  Monitor.cpp  linux_DeviceManager.cpp
Tether/Source/Events/: EventHandler.cpp  WindowErrorEvent.cpp  WindowMoveEvent.cpp  WindowResizeEvent.cpp
Tether/Source/Input/: KeyCharInfo.cpp  KeyInfo.cpp  MouseClickInfo.cpp  MouseMoveInfo.cpp  RawMouseMoveInfo.cpp
Tether/Source/Native/: SimpleWindowNative.cpp  SimpleWindowSetNative.cpp  Win32SimpleWindow.cpp
Tether/Source/Platform/: CreateWindow.cpp  Linux_Library.cpp  Linux_LibraryLoader.cpp  Win32Application.cpp  Win32Window.cpp  Win32_DeviceManager.cpp  Win32_Library.cpp  Win32_LibraryLoader.cpp  X11Application.cpp  X11Window.cpp
Tether/Source/Platform/Linux/: Linux_DeviceManager.cpp  (+4 more)
Tether/Tests/: CMakeLists.txt
Tether/Tests/Fullscreen/: CMakeLists.txt
Tether/Tests/Monitors/: CMakeLists.txt  README.md
Tether/Tests/MultipleWindows/: CMakeLists.txt  README.md
Tether/Tests/SimpleWindow/: CMakeLists.txt
(+337 files in other folders)
